--- a/git-clone/index.html
+++ b/git-clone/index.html
@@ -11,5 +11,8 @@
         Quaerat voluptatem inventore id veniam sit excepturi, 
         odit laborum soluta saepe provident?
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, officia.
+    </p>
 </body>
 </html>
