--- a/git-clone/index.html
+++ b/git-clone/index.html
@@ -14,5 +14,11 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, officia.
     </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, cupiditate in. 
+        Minima dolores in expedita ut optio accusamus omnis, 
+        quam ab suscipit odit, voluptatem maiores. Eum amet provident iste quibusdam 
+        iusto ea dolores dolorum beatae recusandae, quae totam tempore commodi?
+    </p>
 </body>
 </html>
